--- a/src/main/webapp/html/web/index.html
+++ b/src/main/webapp/html/web/index.html
@@ -56,7 +56,7 @@ Vue.use(VueAwesomeSwiper)
 <div class="ms-nav">
  <div class="body">
   <div class="logo">
-   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1632156132004.jpg" class="logo-pic">
+   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1632215765115.jpg" class="logo-pic">
    <img title="" alt="" src="https://www.mingsoft.net//template/1/ms/images/1596437934982.png" class="logo-desc">
   </div>
   <div @click="switchShow([&quot;1605172743000_96378&quot;]);" class="nav-h5">
@@ -72,6 +72,12 @@ Vue.use(VueAwesomeSwiper)
     <a href="/gywm/lianxiwomen/index.html" class="nav-h5-item ">
      关于我们
     </a>
+    <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-h5-item ">
+     公司产品
+    </a>
+    <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
+     公司产品
+    </a>
    </div>
   </div>
   <div class="nav-item">
@@ -85,6 +91,12 @@ Vue.use(VueAwesomeSwiper)
    </a>
    <a href="/gywm/lianxiwomen/index.html" class="item">
     关于我们
+   </a>
+   <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="item">
+    公司产品
+   </a>
+   <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="item">
+    公司产品
    </a>
   </div>
   <div class="nav-search">
@@ -119,8 +131,20 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
      <!--静态图片-->
      <!--动态图片-->
      <swiper-slide>
-      <a href="https://www.mingsoft.net" target="_blank" style="width:100%;height: 100%">
-       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609838691084.png');background-size: cover; background-position: center; width:100%;height: 100%">
+      <a href="" target="_blank" style="width:100%;height: 100%">
+       <div style="background-image: url('http://localhost:8081//');background-size: cover; background-position: center; width:100%;height: 100%">
+       </div>
+      </a>
+     </swiper-slide>
+     <swiper-slide>
+      <a href="" target="_blank" style="width:100%;height: 100%">
+       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835614568.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
+       </div>
+      </a>
+     </swiper-slide>
+     <swiper-slide>
+      <a href="" target="_blank" style="width:100%;height: 100%">
+       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835629433.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
      </swiper-slide>
@@ -259,20 +283,43 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
        <a href="http://localhost:8081//html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
       </div>
     </div>
+    <div class="foot-nav">
+     <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
    </div>
    <div class="top-right">
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">
+     <img title="" alt="" src="http://localhost:8081///upload/1/swwx/1632213932332.jpg" class="pic">
      <span class="text"> 商务微信 </span>
     </div>
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
+     <img title="" alt="" src="http://localhost:8081///upload/1/gzh/1632213929452.jpg" class="pic">
      <span class="text"> 公众号 </span>
     </div>
    </div>
   </div>
-  <span class="copyright"> <el-link href="https://www.mingsoft.net/" type="primary">© 江西铭软科技有限公司</el-link> 2012-至今 All Rights Reserved. Powered by MCms </span>
-  <span class="power"> @该网页由 <el-link href="https://designer.mingsoft.net/" type="primary">MDesigner</el-link> 制作完成 </span>
+  <span class="copyright">版权所有 ©北京奕凡星辰科技有限公司2020-2021 保留一切权利。</span>
  </div>
 </div>
   </div>
