--- a/src/main/webapp/html/web/index.html
+++ b/src/main/webapp/html/web/index.html
@@ -310,11 +310,11 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
    </div>
    <div class="top-right">
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081///upload/1/swwx/1632213932332.jpg" class="pic">
+     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">
      <span class="text"> 商务微信 </span>
     </div>
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081///upload/1/gzh/1632213929452.jpg" class="pic">
+     <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
      <span class="text"> 公众号 </span>
     </div>
    </div>
