--- a/src/main/webapp/html/web/index.html
+++ b/src/main/webapp/html/web/index.html
@@ -56,7 +56,7 @@ Vue.use(VueAwesomeSwiper)
 <div class="ms-nav">
  <div class="body">
   <div class="logo">
-   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1632215765115.jpg" class="logo-pic">
+   <img title="" alt="" src="http://localhost:8081//" class="logo-pic">
    <img title="" alt="" src="https://www.mingsoft.net//template/1/ms/images/1596437934982.png" class="logo-desc">
   </div>
   <div @click="switchShow([&quot;1605172743000_96378&quot;]);" class="nav-h5">
@@ -132,12 +132,6 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
      <!--动态图片-->
      <swiper-slide>
       <a href="" target="_blank" style="width:100%;height: 100%">
-       <div style="background-image: url('http://localhost:8081//');background-size: cover; background-position: center; width:100%;height: 100%">
-       </div>
-      </a>
-     </swiper-slide>
-     <swiper-slide>
-      <a href="" target="_blank" style="width:100%;height: 100%">
        <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835614568.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
@@ -145,6 +139,12 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
      <swiper-slide>
       <a href="" target="_blank" style="width:100%;height: 100%">
        <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835629433.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
+       </div>
+      </a>
+     </swiper-slide>
+     <swiper-slide>
+      <a href="" target="_blank" style="width:100%;height: 100%">
+       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609740022739.png');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
      </swiper-slide>
@@ -309,10 +309,10 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
     </div>
    </div>
    <div class="top-right">
-    <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">
-     <span class="text"> 商务微信 </span>
-    </div>
+<!--    <div class="qr">-->
+<!--     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">-->
+<!--     <span class="text"> 商务微信 </span>-->
+<!--    </div>-->
     <div class="qr">
      <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
      <span class="text"> 公众号 </span>
