--- a/src/main/webapp/html/web/index.html
+++ b/src/main/webapp/html/web/index.html
@@ -10,19 +10,19 @@
   <meta name="app-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="keywords" content="CMS">
   <meta name="description" content="CMS">
-  <script type="text/javascript" src="http://localhost:8081//static/plugins/vue/2.6.9/vue.min.js"></script>
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/minireset/0.0.2/minireset.min.css">
+  <script type="text/javascript" src="http://127.0.0.1:8081/static/plugins/vue/2.6.9/vue.min.js"></script>
+  <link rel="stylesheet" href="http://127.0.0.1:8081/static/plugins/minireset/0.0.2/minireset.min.css">
   <link rel="stylesheet" href="https://cdn.mingsoft.net/iconfont/iconfont.css">
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/animate/4.1.0/animate.min.css">
-  <script src="http://localhost:8081//static/plugins/element-ui/2.12.0/index.js"></script>
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/element-ui/2.12.0/index.css">
-  <link rel="stylesheet" href="http://localhost:8081//template/1/default/css/app.css">
+  <link rel="stylesheet" href="http://127.0.0.1:8081/static/plugins/animate/4.1.0/animate.min.css">
+  <script src="http://127.0.0.1:8081/static/plugins/element-ui/2.12.0/index.js"></script>
+  <link rel="stylesheet" href="http://127.0.0.1:8081/static/plugins/element-ui/2.12.0/index.css">
+  <link rel="stylesheet" href="http://127.0.0.1:8081/template/1/default/css/app.css">
   <!--网络请求框架-->
-  <script src="http://localhost:8081//static/plugins/axios/0.18.0/axios.min.js"></script>
-  <script src="http://localhost:8081//static/plugins/qs/6.6.0/qs.min.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.http.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.util.js"></script>
+  <script src="http://127.0.0.1:8081/static/plugins/axios/0.18.0/axios.min.js"></script>
+  <script src="http://127.0.0.1:8081/static/plugins/qs/6.6.0/qs.min.js"></script>
+  <script src="http://127.0.0.1:8081/static/plugins/ms/1.0.0/ms.js"></script>
+  <script src="http://127.0.0.1:8081/static/plugins/ms/1.0.0/ms.http.js"></script>
+  <script src="http://127.0.0.1:8081/static/plugins/ms/1.0.0/ms.util.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@4.5.1/dist/js/swiper.min.js"></script>
   <script>
 SwiperClass = Swiper
@@ -56,52 +56,52 @@ Vue.use(VueAwesomeSwiper)
 <div class="ms-nav">
  <div class="body">
   <div class="logo">
-   <img title="" alt="" src="http://localhost:8081//" class="logo-pic">
+   <img title="" alt="" src="http://127.0.0.1:8081//upload/1/appLogo/1632215765115.jpg" class="logo-pic">
    <img title="" alt="" src="https://www.mingsoft.net//template/1/ms/images/1596437934982.png" class="logo-desc">
   </div>
   <div @click="switchShow([&quot;1605172743000_96378&quot;]);" class="nav-h5">
    <i class="iconfont icon-caidan nav-h5-icon"></i>
    <div id="key_1605172743000_96378" class="nav-h5-body" style="display: none">
-    <a href="http://localhost:8081/" class="nav-h5-item"> 首页 </a>
-    <a href="http://localhost:8081//html/web/product/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:8081" class="nav-h5-item"> 首页 </a>
+    <a href="http://127.0.0.1:8081/html/web/product/index.html" class="nav-h5-item ">
      公司产品
     </a>
-    <a href="http://localhost:8081//html/web/news/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:8081/html/web/news/index.html" class="nav-h5-item ">
      新闻动态
     </a>
     <a href="/gywm/lianxiwomen/index.html" class="nav-h5-item ">
      关于我们
     </a>
-    <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:8081/html/web/gongsichanpin/index.html" class="nav-h5-item ">
      公司产品
     </a>
-    <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
      公司产品
     </a>
    </div>
   </div>
   <div class="nav-item">
-   <a href="http://localhost:8081/" class="item"> 首页 </a>
+   <a href="http://127.0.0.1:8081" class="item"> 首页 </a>
 
-   <a href="http://localhost:8081//html/web/product/index.html" class="item">
+   <a href="http://127.0.0.1:8081/html/web/product/index.html" class="item">
     公司产品
    </a>
-   <a href="http://localhost:8081//html/web/news/index.html" class="item">
+   <a href="http://127.0.0.1:8081/html/web/news/index.html" class="item">
     新闻动态
    </a>
    <a href="/gywm/lianxiwomen/index.html" class="item">
     关于我们
    </a>
-   <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="item">
+   <a href="http://127.0.0.1:8081/html/web/gongsichanpin/index.html" class="item">
     公司产品
    </a>
-   <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="item">
+   <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/index.html" class="item">
     公司产品
    </a>
   </div>
   <div class="nav-search">
    <!--搜索-start-->
-   <form id="searchDataForm" action="http://localhost:8081//mcms/search.do" method="post" class="ms-search-input">
+   <form id="searchDataForm" action="http://127.0.0.1:8081/mcms/search.do" method="post" class="ms-search-input">
     <div class="ms-search-input-div">
      <!--输入框 - start -->
      <input class="ms-input" name="content_title" placeholder="输入搜索关键字">
@@ -132,19 +132,19 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
      <!--动态图片-->
      <swiper-slide>
       <a href="" target="_blank" style="width:100%;height: 100%">
-       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835614568.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
+       <div style="background-image: url('http://127.0.0.1:8081/');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
      </swiper-slide>
      <swiper-slide>
       <a href="" target="_blank" style="width:100%;height: 100%">
-       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609835629433.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
+       <div style="background-image: url('http://127.0.0.1:8081//upload/1/cms/content/1609835614568.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
      </swiper-slide>
      <swiper-slide>
       <a href="" target="_blank" style="width:100%;height: 100%">
-       <div style="background-image: url('http://localhost:8081///upload/1/cms/content/1609740022739.png');background-size: cover; background-position: center; width:100%;height: 100%">
+       <div style="background-image: url('http://127.0.0.1:8081//upload/1/cms/content/1609835629433.jpeg');background-size: cover; background-position: center; width:100%;height: 100%">
        </div>
       </a>
      </swiper-slide>
@@ -153,7 +153,7 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
    <div class="about">
     <div class="body">
      <div class="left">
-      <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609838258663.png">
+      <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609838258663.png">
      </div>
      <div class="right">
       <div class="title">
@@ -172,37 +172,37 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
     <div class="body">
      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609836029087.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609836029087.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/pingtaichanpin/1329316951228489729.html" class="text"> Store应用市场 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/pingtaichanpin/1329316951228489729.html" class="text"> Store应用市场 </a>
      </div>      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609837914855.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609837914855.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/pingtaichanpin/1329316887084998658.html" class="text"> Designer设计器 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/pingtaichanpin/1329316887084998658.html" class="text"> Designer设计器 </a>
      </div>      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609838011513.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609838011513.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/pingtaichanpin/1329316838384934914.html" class="text"> Code代码生成器 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/pingtaichanpin/1329316838384934914.html" class="text"> Code代码生成器 </a>
      </div>      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609838116473.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609838116473.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/pingtaichanpin/1329316558960402434.html" class="text"> PM项目管理 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/pingtaichanpin/1329316558960402434.html" class="text"> PM项目管理 </a>
      </div>      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609837616948.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609837616948.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/hycp/1329315928002863105.html" class="text"> BIMCms施工管理软件 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/hycp/1329315928002863105.html" class="text"> BIMCms施工管理软件 </a>
      </div>      <div class="prod">
       <div class="pic">
-       <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609837720097.png">
+       <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609837720097.png">
       </div>
-      <a href="http://localhost:8081//html/web/product/hycp/1329315860382294018.html" class="text"> MEC工程造价咨询管理软件 </a>
+      <a href="http://127.0.0.1:8081/html/web/product/hycp/1329315860382294018.html" class="text"> MEC工程造价咨询管理软件 </a>
      </div> 
     </div>
-    <a href="http://localhost:8081//html/web/product/index.html" class="more"> 更多产品 </a>
+    <a href="http://127.0.0.1:8081/html/web/product/index.html" class="more"> 更多产品 </a>
    </div>
    <div class="news">
     <div class="title">
@@ -210,8 +210,8 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
     </div>
     <div class="body">
      <div class="left">
-      <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609825459624.png">
-      <a href="http://localhost:8081//html/web/news/gsdt/1329374638616158210.html" target="_blank" class="title"> 5.2.0稳定版本发布 </a>
+      <img title="" alt="" src="http://127.0.0.1:8081//upload/1/cms/content/1609825459624.png">
+      <a href="http://127.0.0.1:8081/html/web/news/gsdt/1329374638616158210.html" target="_blank" class="title"> 5.2.0稳定版本发布 </a>
       <span class="desc">  </span>
      </div> 
      <div class="right">
@@ -221,7 +221,7 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
         <span class="date"> 2021-01 </span>
        </div>
        <div class="news-body">
-        <a href="http://localhost:8081//html/web/news/xingyedongtai/1346302136240926721.html" class="title"> 铭飞MCMS内容管理系统完整开源版J2EE代码 </a>
+        <a href="http://127.0.0.1:8081/html/web/news/xingyedongtai/1346302136240926721.html" class="title"> 铭飞MCMS内容管理系统完整开源版J2EE代码 </a>
         <span class="desc"> 官网同时提供一键运行版本下载，请步移官网.... </span>
        </div>
       </div>       <div class="news-item">
@@ -230,7 +230,7 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
         <span class="date"> 2021-01 </span>
        </div>
        <div class="news-body">
-        <a href="http://localhost:8081//html/web/news/xingyedongtai/1346299650146922497.html" class="title"> 【网站】国内 前6名 Java开源CMS建站系统 </a>
+        <a href="http://127.0.0.1:8081/html/web/news/xingyedongtai/1346299650146922497.html" class="title"> 【网站】国内 前6名 Java开源CMS建站系统 </a>
         <span class="desc"> 下面我们开始分享一下开源中国中最火的Java开源CMS建站系统 </span>
        </div>
       </div>       <div class="news-item">
@@ -239,7 +239,7 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
         <span class="date"> 2020-11 </span>
        </div>
        <div class="news-body">
-        <a href="http://localhost:8081//html/web/news/xingyedongtai/1329374724146405378.html" class="title"> 国内最火的10款Java开源项目，都是国人开发，CMS居多 </a>
+        <a href="http://127.0.0.1:8081/html/web/news/xingyedongtai/1329374724146405378.html" class="title"> 国内最火的10款Java开源项目，都是国人开发，CMS居多 </a>
         <span class="desc"> 价值源自分享！铭飞系统不仅一套简单好用的开源系统、更是一整套优质的开源生态内容体系。铭飞的使命就是降低开发成本提高开发效率，提供全方位的企业级开发解决方案，每月28定期更新版本 </span>
        </div>
       </div> 
@@ -247,74 +247,74 @@ navigation: {nextEl: '.swiper-button-next',prevEl: '.swiper-button-prev'}
     </div>
     <div class="more">
     </div>
-    <a href="http://localhost:8081//html/web/news/index.html" class="more"> 更多新闻 </a>
+    <a href="http://127.0.0.1:8081/html/web/news/index.html" class="more"> 更多新闻 </a>
    </div>
 <div class="ms-footer">
  <div class="body">
   <div class="top">
    <div class="top-left">
          <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/product/index.html" class="nav-item"> 公司产品</a>
+     <a href="http://127.0.0.1:8081/html/web/product/index.html" class="nav-item"> 公司产品</a>
       <div>
-       <a href="http://localhost:8081//html/web/product/kycp/index.html" class="item"> 开源产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/product/kycp/index.html" class="item"> 开源产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/product/hycp/index.html" class="item"> 行业产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/product/hycp/index.html" class="item"> 行业产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/product/pingtaichanpin/index.html" class="item"> 平台产品 </a>
-      </div>
-    </div>
-    <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/news/index.html" class="nav-item"> 新闻动态</a>
-      <div>
-       <a href="http://localhost:8081//html/web/news/gsdt/index.html" class="item"> 公司动态 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/news/xingyedongtai/index.html" class="item"> 行业动态 </a>
+       <a href="http://127.0.0.1:8081/html/web/product/pingtaichanpin/index.html" class="item"> 平台产品 </a>
       </div>
     </div>
     <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gywm/index.html" class="nav-item"> 关于我们</a>
+     <a href="http://127.0.0.1:8081/html/web/news/index.html" class="nav-item"> 新闻动态</a>
       <div>
-       <a href="http://localhost:8081//html/web/gywm/lianxiwomen/index.html" class="item"> 联系我们 </a>
+       <a href="http://127.0.0.1:8081/html/web/news/gsdt/index.html" class="item"> 公司动态 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
-      </div>
-    </div>
-    <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/news/xingyedongtai/index.html" class="item"> 行业动态 </a>
       </div>
     </div>
     <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+     <a href="http://127.0.0.1:8081/html/web/gywm/index.html" class="nav-item"> 关于我们</a>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/gywm/lianxiwomen/index.html" class="item"> 联系我们 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://127.0.0.1:8081/html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:8081/html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
       </div>
     </div>
    </div>
    <div class="top-right">
 <!--    <div class="qr">-->
-<!--     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">-->
+<!--     <img title="" alt="" src="http://127.0.0.1:8081/template/1/default/images/sw.png" class="pic">-->
 <!--     <span class="text"> 商务微信 </span>-->
 <!--    </div>-->
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
+     <img title="" alt="" src="http://127.0.0.1:8081/template/1/default/images/gzh.png" class="pic">
      <span class="text"> 公众号 </span>
     </div>
    </div>
