--- a/src/main/webapp/html/web/product/kycp/list-2.html
+++ b/src/main/webapp/html/web/product/kycp/list-2.html
@@ -37,7 +37,7 @@
 <div class="ms-nav">
  <div class="body">
   <div class="logo">
-   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1609397756549.png" class="logo-pic">
+   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1632215765115.jpg" class="logo-pic">
    <img title="" alt="" src="https://www.mingsoft.net//template/1/ms/images/1596437934982.png" class="logo-desc">
   </div>
   <div @click="switchShow([&quot;1605172743000_96378&quot;]);" class="nav-h5">
@@ -53,6 +53,12 @@
     <a href="/gywm/lianxiwomen/index.html" class="nav-h5-item ">
      关于我们
     </a>
+    <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-h5-item ">
+     公司产品
+    </a>
+    <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
+     公司产品
+    </a>
    </div>
   </div>
   <div class="nav-item">
@@ -66,6 +72,12 @@
    </a>
    <a href="/gywm/lianxiwomen/index.html" class="item">
     关于我们
+   </a>
+   <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="item">
+    公司产品
+   </a>
+   <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="item">
+    公司产品
    </a>
   </div>
   <div class="nav-search">
@@ -113,6 +125,12 @@
       <div class="list">
        <div class="list-body">
         <div class="product">
+         <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609739824520.png" />
+         <a href="http://localhost:8081//html/web/product/kycp/1345972513561161729.html">
+          关注插件
+         </a>
+        </div>
+                <div class="product">
          <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609739587867.png" />
          <a href="http://localhost:8081//html/web/product/kycp/1345971507544764417.html">
           微信插件
@@ -185,20 +203,43 @@
        <a href="http://localhost:8081//html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
       </div>
     </div>
+    <div class="foot-nav">
+     <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
    </div>
    <div class="top-right">
-    <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">
-     <span class="text"> 商务微信 </span>
-    </div>
+<!--    <div class="qr">-->
+<!--     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">-->
+<!--     <span class="text"> 商务微信 </span>-->
+<!--    </div>-->
     <div class="qr">
      <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
      <span class="text"> 公众号 </span>
     </div>
    </div>
   </div>
-  <span class="copyright"> <el-link href="https://www.mingsoft.net/" type="primary">© 江西铭软科技有限公司</el-link> 2012-至今 All Rights Reserved. Powered by MCms </span>
-  <span class="power"> @该网页由 <el-link href="https://designer.mingsoft.net/" type="primary">MDesigner</el-link> 制作完成 </span>
+  <span class="copyright">版权所有 ©北京奕凡星辰科技有限公司2020-2021 保留一切权利。</span>
  </div>
 </div>
   </div>   
@@ -215,7 +256,7 @@ var app = new Vue({
      //页数总数
      pageTotal: 2,
      //内容总数
-     contentCount: 10
+     contentCount: 11
     },
     methods: {
      switchShow:function(arr){
