--- a/src/main/webapp/html/web/huandeng/index.html
+++ b/src/main/webapp/html/web/huandeng/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>CMS建站管理后台</title>
+  <title>CMS建站管理后台001</title>
   <meta http-equiv="content-type" content="text/html">
   <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
   <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
@@ -10,19 +10,19 @@
   <meta name="app-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="keywords" content="CMS">
   <meta name="description" content="CMS">
-  <script type="text/javascript" src="http://localhost:8081//static/plugins/vue/2.6.9/vue.min.js"></script>
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/minireset/0.0.2/minireset.min.css">
+  <script type="text/javascript" src="http://127.0.0.1:808/static/plugins/vue/2.6.9/vue.min.js"></script>
+  <link rel="stylesheet" href="http://127.0.0.1:808/static/plugins/minireset/0.0.2/minireset.min.css">
   <link rel="stylesheet" href="https://cdn.mingsoft.net/iconfont/iconfont.css">
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/animate/4.1.0/animate.min.css">
-  <script src="http://localhost:8081//static/plugins/element-ui/2.12.0/index.js"></script>
-  <link rel="stylesheet" href="http://localhost:8081//static/plugins/element-ui/2.12.0/index.css">
-  <link rel="stylesheet" href="http://localhost:8081//template/1/default/css/app.css">
+  <link rel="stylesheet" href="http://127.0.0.1:808/static/plugins/animate/4.1.0/animate.min.css">
+  <script src="http://127.0.0.1:808/static/plugins/element-ui/2.12.0/index.js"></script>
+  <link rel="stylesheet" href="http://127.0.0.1:808/static/plugins/element-ui/2.12.0/index.css">
+  <link rel="stylesheet" href="http://127.0.0.1:808/template/1/default/css/app.css">
   <!--网络请求框架-->
-  <script src="http://localhost:8081//static/plugins/axios/0.18.0/axios.min.js"></script>
-  <script src="http://localhost:8081//static/plugins/qs/6.6.0/qs.min.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.http.js"></script>
-  <script src="http://localhost:8081//static/plugins/ms/1.0.0/ms.util.js"></script>
+  <script src="http://127.0.0.1:808/static/plugins/axios/0.18.0/axios.min.js"></script>
+  <script src="http://127.0.0.1:808/static/plugins/qs/6.6.0/qs.min.js"></script>
+  <script src="http://127.0.0.1:808/static/plugins/ms/1.0.0/ms.js"></script>
+  <script src="http://127.0.0.1:808/static/plugins/ms/1.0.0/ms.http.js"></script>
+  <script src="http://127.0.0.1:808/static/plugins/ms/1.0.0/ms.util.js"></script>
   <script>
         ms.base = "";
     </script>
@@ -37,52 +37,52 @@
 <div class="ms-nav">
  <div class="body">
   <div class="logo">
-   <img title="" alt="" src="http://localhost:8081///upload/1/appLogo/1632215765115.jpg" class="logo-pic">
+   <img title="" alt="" src="http://127.0.0.1:808//upload/1/appLogo/1632215765115.jpg" class="logo-pic">
    <img title="" alt="" src="https://www.mingsoft.net//template/1/ms/images/1596437934982.png" class="logo-desc">
   </div>
   <div @click="switchShow([&quot;1605172743000_96378&quot;]);" class="nav-h5">
    <i class="iconfont icon-caidan nav-h5-icon"></i>
    <div id="key_1605172743000_96378" class="nav-h5-body" style="display: none">
-    <a href="http://localhost:8081/" class="nav-h5-item"> 首页 </a>
-    <a href="http://localhost:8081//html/web/product/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:808" class="nav-h5-item"> 首页 </a>
+    <a href="http://127.0.0.1:808/html/web/product/index.html" class="nav-h5-item ">
      公司产品
     </a>
-    <a href="http://localhost:8081//html/web/news/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:808/html/web/news/index.html" class="nav-h5-item ">
      新闻动态
     </a>
     <a href="/gywm/lianxiwomen/index.html" class="nav-h5-item ">
      关于我们
     </a>
-    <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:808/html/web/gongsichanpin/index.html" class="nav-h5-item ">
      公司产品
     </a>
-    <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
+    <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/index.html" class="nav-h5-item ">
      公司产品
     </a>
    </div>
   </div>
   <div class="nav-item">
-   <a href="http://localhost:8081/" class="item"> 首页 </a>
+   <a href="http://127.0.0.1:808" class="item"> 首页 </a>
 
-   <a href="http://localhost:8081//html/web/product/index.html" class="item">
+   <a href="http://127.0.0.1:808/html/web/product/index.html" class="item">
     公司产品
    </a>
-   <a href="http://localhost:8081//html/web/news/index.html" class="item">
+   <a href="http://127.0.0.1:808/html/web/news/index.html" class="item">
     新闻动态
    </a>
    <a href="/gywm/lianxiwomen/index.html" class="item">
     关于我们
    </a>
-   <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="item">
+   <a href="http://127.0.0.1:808/html/web/gongsichanpin/index.html" class="item">
     公司产品
    </a>
-   <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="item">
+   <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/index.html" class="item">
     公司产品
    </a>
   </div>
   <div class="nav-search">
    <!--搜索-start-->
-   <form id="searchDataForm" action="http://localhost:8081//mcms/search.do" method="post" class="ms-search-input">
+   <form id="searchDataForm" action="http://127.0.0.1:808/mcms/search.do" method="post" class="ms-search-input">
     <div class="ms-search-input-div">
      <!--输入框 - start -->
      <input class="ms-input" name="content_title" placeholder="输入搜索关键字">
@@ -106,15 +106,15 @@
        <span class="ms-channel-path-label"> 当前位置： </span>
        <a href="/" class="ms-channel-path-index"> 首页 </a> 
        <i class="iconfont icon-youjiantou"></i>
-       <a href="http://localhost:8081//html/web/huandeng/index.html" class="ms-channel-path-link"> 幻灯 </a> 
+       <a href="http://127.0.0.1:808/html/web/huandeng/index.html" class="ms-channel-path-link"> 幻灯 </a> 
       </div>
       <div class="right-body">
        <div class="news-item">
         <div class="pic">
-         <img title="" alt="" src="http://localhost:8081///upload/1/cms/content/1609838691084.png">
+         <img title="" alt="" src="http://127.0.0.1:808//upload/1/cms/content/1609838691084.png">
         </div>
         <div class="news-content">
-         <a href="http://localhost:8081//html/web/huandeng/1329375005479346177.html" class="title"> 降低软件研发成本 </a>
+         <a href="http://127.0.0.1:808/html/web/huandeng/1329375005479346177.html" class="title"> 降低软件研发成本 </a>
          <span class="desc">  </span>
          <div class="news-footer">
           <span class="label"> 发布时间 </span>
@@ -147,67 +147,67 @@
   <div class="top">
    <div class="top-left">
          <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/product/index.html" class="nav-item"> 公司产品</a>
+     <a href="http://127.0.0.1:808/html/web/product/index.html" class="nav-item"> 公司产品</a>
       <div>
-       <a href="http://localhost:8081//html/web/product/kycp/index.html" class="item"> 开源产品 </a>
+       <a href="http://127.0.0.1:808/html/web/product/kycp/index.html" class="item"> 开源产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/product/hycp/index.html" class="item"> 行业产品 </a>
+       <a href="http://127.0.0.1:808/html/web/product/hycp/index.html" class="item"> 行业产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/product/pingtaichanpin/index.html" class="item"> 平台产品 </a>
-      </div>
-    </div>
-    <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/news/index.html" class="nav-item"> 新闻动态</a>
-      <div>
-       <a href="http://localhost:8081//html/web/news/gsdt/index.html" class="item"> 公司动态 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/news/xingyedongtai/index.html" class="item"> 行业动态 </a>
+       <a href="http://127.0.0.1:808/html/web/product/pingtaichanpin/index.html" class="item"> 平台产品 </a>
       </div>
     </div>
     <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gywm/index.html" class="nav-item"> 关于我们</a>
+     <a href="http://127.0.0.1:808/html/web/news/index.html" class="nav-item"> 新闻动态</a>
       <div>
-       <a href="http://localhost:8081//html/web/gywm/lianxiwomen/index.html" class="item"> 联系我们 </a>
+       <a href="http://127.0.0.1:808/html/web/news/gsdt/index.html" class="item"> 公司动态 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
-      </div>
-    </div>
-    <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
-      </div>
-      <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+       <a href="http://127.0.0.1:808/html/web/news/xingyedongtai/index.html" class="item"> 行业动态 </a>
       </div>
     </div>
     <div class="foot-nav">
-     <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+     <a href="http://127.0.0.1:808/html/web/gywm/index.html" class="nav-item"> 关于我们</a>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+       <a href="http://127.0.0.1:808/html/web/gywm/lianxiwomen/index.html" class="item"> 联系我们 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+       <a href="http://127.0.0.1:808/html/web/gywm/gongsijieshao/index.html" class="item"> 公司介绍 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://127.0.0.1:808/html/web/gongsichanpin/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin/kaiyuanchanpin/index.html" class="item"> 开源产品 </a>
       </div>
       <div>
-       <a href="http://localhost:8081//html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin/xingyechanpin/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin/pingtaichanpin1397743931628085249/index.html" class="item"> 平台产品 </a>
+      </div>
+    </div>
+    <div class="foot-nav">
+     <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/index.html" class="nav-item"> 公司产品</a>
+      <div>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/kaiyuanchanpin1397750109716242433/index.html" class="item"> 开源产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/xingyechanpin1397750109993066497/index.html" class="item"> 行业产品 </a>
+      </div>
+      <div>
+       <a href="http://127.0.0.1:808/html/web/gongsichanpin1397750109561053185/pingtaichanpin1397750110131478529/index.html" class="item"> 平台产品 </a>
       </div>
     </div>
    </div>
    <div class="top-right">
 <!--    <div class="qr">-->
-<!--     <img title="" alt="" src="http://localhost:8081//template/1/default/images/sw.png" class="pic">-->
+<!--     <img title="" alt="" src="http://127.0.0.1:808/template/1/default/images/sw.png" class="pic">-->
 <!--     <span class="text"> 商务微信 </span>-->
 <!--    </div>-->
     <div class="qr">
-     <img title="" alt="" src="http://localhost:8081//template/1/default/images/gzh.png" class="pic">
+     <img title="" alt="" src="http://127.0.0.1:808/template/1/default/images/gzh.png" class="pic">
      <span class="text"> 公众号 </span>
     </div>
    </div>
@@ -243,9 +243,9 @@ var app = new Vue({
      },
      handleCurrentChange:function(val) {
       if(val==1) {
-       location.href = "http://localhost:8081//html/web//huandeng/index.html";
+       location.href = "http://127.0.0.1:808/html/web//huandeng/index.html";
       } else {
-       location.href = "http://localhost:8081//html/web//huandeng/list-" + val + ".html";
+       location.href = "http://127.0.0.1:808/html/web//huandeng/list-" + val + ".html";
       }
      }
     },
