--- a/src/main/webapp/html/web/index.html
+++ b/src/main/webapp/html/web/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <title>CMS建站管理后台</title>
+  <title>CMS建站管理后台001</title>
   <meta http-equiv="content-type" content="text/html">
   <meta HTTP-EQUIV="Pragma" CONTENT="no-cache">
   <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
